# churn-mlops-project

./: .dvcignore  .gitignore  Dockerfile  FIXES_SUMMARY.md  LICENSE copy  MULTIPROCESSING_FIXES.md  README copy.md  README.md  X_test.csv  X_train.csv  dvc.yaml  main.py  main_kube.py  pyproject.toml  quick_test.py  requirements.txt  run_pipeline.py  setup.py  template.py  y_train.csv
.dvc/: config
API/: ML_controller.py  pretrained_model.py  router.py
TEST/: churn_probability.ipynb  generate_pipeline_yaml.py  kube.py  kubeflow_pipeline.py  requirements.txt  run_kubeflow_pipeline.py  test.py  test_kube.ipynb
TEST/API/: ML_controller.py  pretrained_model.py
config/: config.yaml
controller/: prediction.py  retraining.py
scripts/: init_dvc.sh  setup_ec2.sh
src/Churn/components/: base_model.py  cloud_storage_push.py  data_ingestion.py  model_training.py  support.py
src/Churn/config/: configuration.py
src/Churn/entity/: config_entity.py
src/Churn/pipeline/: cleanup.py  cloud_storage_push.py  kubeflow.py  main_pipeline.py  prediction.py  prepare_data.py  prepare_model.py  train_evaluation.py
src/Churn/utils/: cloud_storage.py  common.py  notify_webhook.py  visualize_ouput.py
src/Sentiment_Analysis/components/: base_model.py  data_ingestion.py  model_training.py
src/Sentiment_Analysis/config/: configuration.py
src/Sentiment_Analysis/entity/: config_entity.py
src/Sentiment_Analysis/pipeline/: kubeflow.py  main_pipeline.py  prepare_data.py  prepare_model.py  train_evaluation.py
src/Sentiment_Analysis/utils/: common.py  (+2 more)
static/: index.html  script.js  styles.css
workflows/: ci-cd.yml
